# SC-LIO-SAM

./: CMakeLists.txt  README.md
config/: params_liosam.yaml
include/: common_lib.hpp  predefined_types.h  utility.h
launch/include/config/: rviz.rviz
src/: featureExtraction.cpp  imageProjection.cpp  mapOptmization.cpp
